fix of #243 Secret gets cut off in nin theme

--- a/theme_nin/sass/style.sass
+++ b/theme_nin/sass/style.sass
@@ -914,10 +914,10 @@ ol.toptrends-list
 
 .new-user
   .modal-wrapper
-    width: $postboard-modal-width
+    width: 640px
     height: 600px
     top: 10%
-    margin: 0 0 0 0-($postboard-modal-width/2)
+    margin: 0 0 0 -320px
     overflow-x: hidden
     overflow-y: hidden
   .modal-content
@@ -927,11 +927,13 @@ ol.toptrends-list
   .text
     margin: 0 0 15px 0
   .emphasis
-    font-size: 18px
     text-align: center
   .secret-key
+    display: block
+    margin-top: 8px
     color: rgba(0.5, 0, 0, 1)
     font-weight: bold
+    font-size: 110%
 
 /******** HASHTAG MODAL***********/
 
